# tonewheel-player

./: .gitmodules  CMakeLists.txt  README.md
player/: CMakeLists.txt  EngineProxy.cpp  EngineProxy.h  PluginConsole.cpp  PluginConsole.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
player/resources/: style.css  view.xml
